[package]
name = "leaf-ffi"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["staticlib", "dylib"]

[features]
default = [
    "default-ring",
]

default-aws-lc= [
    "leaf/minimal-ring",
]

default-ring = [
    "leaf/minimal-ring",
]

default-openssl = [
    "leaf/default-openssl",
]

outbound-quic = [
]

auto-reload = ["leaf/auto-reload"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
